[gd_scene load_steps=2 format=3 uid="uid://icgnrds7ntj4"]

[ext_resource type="Script" uid="uid://8twx51l68fxu" path="res://level_complete_popup.gd" id="1_aihtj"]

[node name="LevelCompletePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aihtj")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0)
self_modulate = Color(1, 1, 1, 0.00392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -125.0
offset_right = 122.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -106.0
offset_right = 97.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Level Complete"
horizontal_alignment = 1

[node name="ComponentLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CPU installed"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Main Menu"
